# CIRCA

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: landau_gel.toml  wertheim_mobility.toml
include/circa/core/: diagnostics.hpp  field.hpp  field_store.hpp  system.hpp
include/circa/integrators/: euler.hpp  registry.hpp  rk4.hpp
include/circa/io/: plain.hpp  vtk.hpp
include/circa/physics/: fe_ac_linear.hpp  fe_ch_landau.hpp
include/circa/terms/: ac_term.hpp
src/: main.cpp
src/core/: diagnostics.hpp  field.hpp  field_store.hpp  grid.hpp  system.hpp
src/integrators/: euler.hpp  integrator.hpp  registry.hpp  rk2.hpp  rk4.hpp
src/io/: log.hpp  plain.hpp  vtk.hpp
src/ops/: deriv_ops.hpp  fd_ops.hpp
src/physics/: fe_ac_gel.hpp  fe_ch_landau.hpp  fe_ch_multi_quad.hpp  fe_ch_wertheim.hpp  mobility.hpp  mobility_multi.hpp
src/terms/: ac_term.hpp  ch_term.hpp  ch_term_multi.hpp
src/util/: config.cpp  config.hpp  math.hpp  strings.cpp  strings.h  toml.hpp
